--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     </head>
     <body>
         <div id="content" style="margin-left: auto; margin-right: auto; width: 80%; padding-top: 30px">
-        <h1 style="text-align: center; font-weight: 700">Welcome to Kek's Page!</h1>
+        <h1 style="text-align: center; font-weight: 700; font-size: auto">Welcome to Kek's Page!</h1>
     <div class="alert alert-primary" role="alert">
-  A simple primary alert—check it out!
+  Check out all the awesome links here! I will typically update this page as I continue to add more things through my posts. Feel free to explore what I have so far!
 </div>
     </div>
     </body>
