--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <html>
     <head>
-        <title>Hello world!</title>
+        <title>Kek's Webpage</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div id="content" style="margin-left: auto; margin-right: auto; width: 80%; padding-top: 30px">
-        <h1 style="text-align: center; font-weight: 700; font-size: auto">Welcome to Kek's Page!</h1>
-    <div class="alert alert-primary" role="alert">
+        <div id="content" style="text-align: center; margin-left: auto; margin-right: auto; width: 80%; padding-top: 30px">
+            <div class="col-sm">
+      <h1 style="font-weight: 700;">Welcome to Kek's Page!</h1>
+    </div>
+            <img style="width: 20%;height: auto; display: block; margin-left: auto;margin-right: auto; margin-top: 20px;margin-bottom: 20px"src="https://i.imgur.com/IWmk3rr.png" alt="https://i.imgur.com/IWmk3rr.png" class="rounded-circle">
+        <h1 style="text-align: center; font-weight: 700;">Kekoa</h1>
+    <div class="alert alert-success" role="alert">
   Check out all the awesome links here! I will typically update this page as I continue to add more things through my posts. Feel free to explore what I have so far!
-</div>
+</div><hr>
+            <h2>Protesting in LA? Be responsible and get tested for COVID-19!</h2>
+            <a href="http://coronavirus.lacity.org/testing"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-danger">City of LA - Free COVID-19 Testing"</button></a><br>
+            <hr>
+            <h2>Justice Links</h2>
+            <a href=sms:55156><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Breonna Taylor: Text "ENOUGH"</button></a><br>
+            <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">End Qualified Immunity Act: Text "SIGN SEUDKP"</button></a><br>
+            <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Repeal 50-a (Repeal allowing NYPD to hide misconduct records): Text "SIGN RISTUS"</button></a><br>
+            
     </div>
     </body>
 </html>
