--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
             <img style="width: 20%;height: auto; display: block; margin-left: auto;margin-right: auto; margin-top: 20px;margin-bottom: 20px"src="https://i.imgur.com/IWmk3rr.png" alt="https://i.imgur.com/IWmk3rr.png" class="rounded-circle">
         <h1 style="text-align: center; font-weight: 700;">Kekoa</h1>
-    <div class="alert alert-success" role="alert">
+    <div style="width: 50%; margin-left: auto; margin-right: auto"class="alert alert-success" role="alert">
   Check out all the awesome links here! I will typically update this page as I continue to add more things through my posts. Feel free to explore what I have so far!
 </div><hr>
             <h2>Protesting in LA? Be responsible and get tested for COVID-19!</h2>
