--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Kek's Webpage</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -13,8 +14,8 @@
     </div>
             <img style="width: 20%;height: auto; display: block; margin-left: auto;margin-right: auto; margin-top: 20px;margin-bottom: 20px"src="https://i.imgur.com/IWmk3rr.png" alt="https://i.imgur.com/IWmk3rr.png" class="rounded-circle">
         <h1 style="text-align: center; font-weight: 700;">Kekoa</h1>
-    <div style="width: 50%; margin-left: auto; margin-right: auto"class="alert alert-success" role="alert">
-  Check out all the awesome links here! I will typically update this page as I continue to add more things through my posts. Feel free to explore what I have so far!
+    <div style="width: 100%; margin-left: auto; margin-right: auto"class="alert alert-success" role="alert">
+  Check out all the awesome links here!
 </div><hr>
             <h2>Protesting in LA? Be responsible and get tested for COVID-19!</h2>
             <a href="http://coronavirus.lacity.org/testing"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-danger">City of LA - Free COVID-19 Testing"</button></a><br>
