--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div class="col-sm">
       <h1 style="font-weight: 700;">Welcome to Kek's Page!</h1>
     </div>
-            <img style="width: 20%;height: auto; display: block; margin-left: auto;margin-right: auto; margin-top: 20px;margin-bottom: 20px"src="https://i.imgur.com/IWmk3rr.png" alt="https://i.imgur.com/IWmk3rr.png" class="rounded-circle">
+            <img style="width: auto;height: 30%; display: block; margin-left: auto;margin-right: auto; margin-top: 20px;margin-bottom: 20px"src="https://i.imgur.com/IWmk3rr.png" alt="https://i.imgur.com/IWmk3rr.png" class="rounded-circle">
         <h1 style="text-align: center; font-weight: 700;">Kekoa</h1>
     <div style="width: 100%; margin-left: auto; margin-right: auto"class="alert alert-success" role="alert">
   Check out all the awesome links here!
