--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     </head>
     <body>
+        <main>
         <div id="content" style="text-align: center; margin-left: auto; margin-right: auto; width: 80%; padding-top: 30px">
             <div class="col-sm">
       <h1 style="font-weight: 700;">Welcome to Kek's Page!</h1>
@@ -26,5 +27,10 @@
             <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Repeal 50-a (Repeal allowing NYPD to hide misconduct records): Text "SIGN RISTUS"</button></a><br>
             
     </div>
+            </main>
+        <br><br>
+    <footer>
+    <small>&copy; Kekoakalani Minami 2020</small>
+    </footer>
     </body>
 </html>
