--- a/index.html
+++ b/index.html
@@ -16,21 +16,23 @@
             <img style="width: auto;height: 30%; display: block; margin-left: auto;margin-right: auto; margin-top: 20px;margin-bottom: 20px"src="https://i.imgur.com/IWmk3rr.png" alt="https://i.imgur.com/IWmk3rr.png" class="rounded-circle">
         <h1 style="text-align: center; font-weight: 700;">Kekoa</h1>
     <div style="width: 100%; margin-left: auto; margin-right: auto"class="alert alert-success" role="alert">
-  Check out all the awesome links here!
+  This is my home toasted webpage! Check out all the awesome links here!
 </div><hr>
-            <h2>Protesting in LA? Be responsible and get tested for COVID-19!</h2>
+            <h3>Be responsible! Get tested for COVID-19!</h3>
             <a href="http://coronavirus.lacity.org/testing"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-danger">City of LA - Free COVID-19 Testing"</button></a><br>
             <hr>
-            <h2>Justice Links</h2>
+            <h3>Justice Links</h3>
             <a href=sms:55156><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Breonna Taylor: Text "ENOUGH"</button></a><br>
             <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">End Qualified Immunity Act: Text "SIGN SEUDKP"</button></a><br>
             <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Repeal 50-a (Repeal allowing NYPD to hide misconduct records): Text "SIGN RISTUS"</button></a><br>
             
     </div>
             </main>
-        <br><br>
-    <footer>
+        <br>
+    <footer style="text-align: center">
+    <small>Made with ❤️</small><br>
     <small>&copy; Kekoakalani Minami 2020</small>
     </footer>
+        <br>
     </body>
 </html>
