--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href=https://open.spotify.com/playlist/4lr7GV53kXrQJ1CdDGjyw4?si=eM9SD4sGQ8S7yIoGodDd0Q><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-dark">low vibes <span class="badge badge-light">New</span></button></a><br>
             <hr>
             <h3>Extras</h3>
-            <a href=https://imgur.com/a/KBxuMqs target="_blank"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">Urbana Worship - Top Streams <span class="badge badge-dark">Updated 6/9</span></button></a><br>
+            <a href=https://imgur.com/a/KBxuMqs target="_blank"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">Urbana Worship - Top Streams <span class="badge badge-dark">Updated on 6/9</span></button></a><br>
             
     </div>
             </main>
