--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
             <a href=sms:55156><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Breonna Taylor: Text "ENOUGH"</button></a><br>
             <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">End Qualified Immunity Act: Text "SIGN SEUDKP"</button></a><br>
             <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Repeal 50-a (Repeal allowing NYPD to hide misconduct records): Text "SIGN RISTUS"</button></a><br>
+            <a href= https://docs.google.com/document/d/1X4-YS3vFn5CLL9QtJSU0xqmTh_h8XilXgOqGAjZISBI/edit><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-danger">View BLM Funds Doc</button></a><br>
+
             
             <hr>
             <h3>Vibes on Spotify</h3>
