--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
             <a href=https://open.spotify.com/user/1271078235/playlist/0pMxpgvSo7nm38BVa2a18q?si=6d1KwKNOQo2oWfA1trUX-w><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-dark">Anytime Worship Jamz</button></a><br>
             <hr>
             <h3>Extras</h3>
-            <a href=https://imgur.com/a/KBxuMqs target="_blank"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">Urbana Worship - Top Streams <span class="badge badge-dark">Updated on 6/9</span></button></a><br>
+            <iframe src="https://open.spotify.com/embed/artist/7D6vULmobL69xLtkISOTjZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+            <a href=https://open.spotify.com/artist/7D6vULmobL69xLtkISOTjZ?si=0hbAnjznTduAvQMh6SImDA target="_blank"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">Urbana Worship - New Album Coming Soon! <span class="badge badge-dark">Updated on 6/9</span></button></a><br>
             
     </div>
             </main>
