--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <hr>
             <h3>Extras</h3>
             <iframe src="https://open.spotify.com/embed/artist/7D6vULmobL69xLtkISOTjZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-            <a href=https://open.spotify.com/artist/7D6vULmobL69xLtkISOTjZ?si=0hbAnjznTduAvQMh6SImDA target="_blank"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">Urbana Worship - New Album Coming Soon! <span class="badge badge-dark">Updated on 6/9</span></button></a><br>
+            <a href=https://open.spotify.com/artist/7D6vULmobL69xLtkISOTjZ?si=0hbAnjznTduAvQMh6SImDA target="_blank"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">Urbana Worship - New Album Coming Soon! <span class="badge badge-dark">Releasing 7/10/2020!</span></button></a><br>
             
     </div>
             </main>
