--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <h3>Justice Links</h3>
 
             <a href=https://docs.google.com/document/d/1X4-YS3vFn5CLL9QtJSU0xqmTh_h8XilXgOqGAjZISBI/edit><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-warning">View BLM Funds Doc</button></a><br>
-            <a href=sms:55156><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Breonna Taylor: Text "ENOUGH"</button></a><br>
+            <a href=https://www.change.org/p/los-angeles-sheriff-s-department-palmdale-station-justice-for-robert-fuller><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Robert Fuller"</button></a><br>
+ <a href=https://www.change.org/p/andy-beshear-justice-for-breonna-taylor><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Breonna Taylor"</button></a><br>
             <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">End Qualified Immunity Act: Text "SIGN SEUDKP"</button></a><br>
-            <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Repeal 50-a (Repeal allowing NYPD to hide misconduct records): Text "SIGN RISTUS"</button></a><br>
 
             
             <hr>
@@ -45,7 +45,6 @@
             <a href=https://open.spotify.com/user/1271078235/playlist/0pMxpgvSo7nm38BVa2a18q?si=6d1KwKNOQo2oWfA1trUX-w><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-dark">Anytime Worship Jamz</button></a><br>
             <hr>
             <h3>Extras</h3>
-            <iframe src="https://open.spotify.com/embed/artist/7D6vULmobL69xLtkISOTjZ" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             <a href=https://open.spotify.com/artist/7D6vULmobL69xLtkISOTjZ?si=0hbAnjznTduAvQMh6SImDA target="_blank"><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">Urbana Worship - New Album Coming Soon! <span class="badge badge-dark">Releasing 7/10/2020!</span></button></a><br>
             
     </div>
@@ -54,7 +53,7 @@
     <footer style="text-align: center">
     <small>Made with ❤️</small><br>
     <small>&copy; Kekoakalani Minami 2020</small><br>
-        <span class="badge badge-dark">Last Updated 6/9/2020</span>
+        <span class="badge badge-dark">Last Updated 6/12/2020</span>
     </footer>
         <br>
     </body>
