--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h3>Justice Links</h3>
 
             <a href=https://docs.google.com/document/d/1X4-YS3vFn5CLL9QtJSU0xqmTh_h8XilXgOqGAjZISBI/edit><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-warning">View BLM Funds Doc</button></a><br>
-            <a href=https://www.change.org/p/los-angeles-sheriff-s-department-palmdale-station-justice-for-robert-fuller><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Robert Fuller"</button></a><br>
- <a href=https://www.change.org/p/andy-beshear-justice-for-breonna-taylor><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Breonna Taylor"</button></a><br>
+            <a href=https://www.change.org/p/los-angeles-sheriff-s-department-palmdale-station-justice-for-robert-fuller><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Robert Fuller</button></a><br>
+ <a href=https://www.change.org/p/andy-beshear-justice-for-breonna-taylor><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Demand Justice for Breonna Taylor</button></a><br>
             <a href=sms:50409><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">End Qualified Immunity Act: Text "SIGN SEUDKP"</button></a><br>
 
             
