--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>      
             <hr>
             <h3>Links</h3>
-            <a href=https://twitch.tv/Tofu_Butes/><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Join me on Twitch.TV!</button></a><br>
+            <a href=https://twitch.tv/Tofu_Bytes/><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Join me on Twitch.TV!</button></a><br>
             <a href=https://hawaiiansintech.org/><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-info">Hawaiians In Tech</button></a><br>
 			<hr>
             <h3>Vibes on Spotify</h3>
