--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<hr>
             <h3>Vibes on Spotify</h3>
 			
-            <a href=https://open.spotify.com/playlist/0GxLwMWKvpo0RnvlaSJLRS?si=9ad1104971434c68><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">multidimensional <span class="badge badge-dark">New</span></button></a><br>
+            <a href=https://open.spotify.com/playlist/5CI1YaHrFM8iairVkgkDqw?si=58F1PzPqSV6SWAe6O-idEg&pi=ZFlNgi1hTc6Gh><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">cubic 2! <span class="badge badge-dark">New</span></button></a><br>
             
             <a href=https://open.spotify.com/playlist/2QbokFqB2QLbLmpeKDMh0l?si=Pp7kIIAPTuWQ7CqXTMgDzg><button style="width: 100%; margin-top: 2px; margin-bottom: 2px"type="button" class="btn btn-success">jesus hip-hop vibe</button></a><br>
             
